--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -49,11 +49,9 @@ jobs:
       - name: Install dependencies
         run: |
           if [ "${{ steps.detect-package-manager.outputs.manager }}" == "npm" ]; then
-            npm update
-            npm --legacy-peer-deps install
+            npm update;npm --legacy-peer-deps install
           elif [ "${{ steps.detect-package-manager.outputs.manager }}" == "yarn" ]; then
-            yarn update
-            yarn --legacy-peer-deps install
+            yarn update;yarn --legacy-peer-deps install
           fi
       - name: Setup Node
         uses: actions/setup-node@v4
